Randomly select 5 questions from pool of 10

--- a/01_quiz.ipynb
+++ b/01_quiz.ipynb
@@ -13,117 +13,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": ["remove-input"]
+    "tags": [
+     "remove-input"
+    ]
    },
    "outputs": [],
-   "source": [
-    "from jupyterquiz import display_quiz\n",
-    "\n",
-    "quiz_data = [\n",
-    "    {\n",
-    "        \"question\": \"What is the correct way to create a variable in Python?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"int age = 10\", \"correct\": False},\n",
-    "            {\"answer\": \"var age = 10\", \"correct\": False},\n",
-    "            {\"answer\": \"age = 10\", \"correct\": True, \"feedback\": \"Correct! Python uses simple assignment without type declarations.\"},\n",
-    "            {\"answer\": \"age := 10\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"Which data type is 'hello'?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"int\", \"correct\": False},\n",
-    "            {\"answer\": \"str\", \"correct\": True, \"feedback\": \"Correct! Text in quotes is a string (str).\"},\n",
-    "            {\"answer\": \"bool\", \"correct\": False},\n",
-    "            {\"answer\": \"float\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What is the output of print(3 + 2 * 2)?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"10\", \"correct\": False},\n",
-    "            {\"answer\": \"7\", \"correct\": True, \"feedback\": \"Correct! Multiplication happens before addition (PEMDAS).\"},\n",
-    "            {\"answer\": \"5\", \"correct\": False},\n",
-    "            {\"answer\": \"8\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"Which collection type stores key-value pairs?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"list\", \"correct\": False},\n",
-    "            {\"answer\": \"tuple\", \"correct\": False},\n",
-    "            {\"answer\": \"dictionary\", \"correct\": True, \"feedback\": \"Correct! Dictionaries store key-value pairs like {'name': 'Jon'}.\"},\n",
-    "            {\"answer\": \"set\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What will print(len([1,2,3,4])) output?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"3\", \"correct\": False},\n",
-    "            {\"answer\": \"4\", \"correct\": True, \"feedback\": \"Correct! len() returns the number of items in the list.\"},\n",
-    "            {\"answer\": \"[1,2,3,4]\", \"correct\": False},\n",
-    "            {\"answer\": \"Error\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"Which of the following is a Boolean value?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"\\\"True\\\"\", \"correct\": False, \"feedback\": \"This is a string, not a Boolean.\"},\n",
-    "            {\"answer\": \"1\", \"correct\": False},\n",
-    "            {\"answer\": \"True\", \"correct\": True, \"feedback\": \"Correct! True and False (capitalized) are Boolean values.\"},\n",
-    "            {\"answer\": \"\\\"False\\\"\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What symbol starts a comment in Python?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"//\", \"correct\": False},\n",
-    "            {\"answer\": \"#\", \"correct\": True, \"feedback\": \"Correct! The hash symbol starts a single-line comment.\"},\n",
-    "            {\"answer\": \"<!-- -->\", \"correct\": False},\n",
-    "            {\"answer\": \"/* */\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What does 'if x > 10:' represent?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"A loop\", \"correct\": False},\n",
-    "            {\"answer\": \"A condition\", \"correct\": True, \"feedback\": \"Correct! This is a conditional statement.\"},\n",
-    "            {\"answer\": \"A function\", \"correct\": False},\n",
-    "            {\"answer\": \"A class\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"Which loop iterates over a list directly?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"while\", \"correct\": False},\n",
-    "            {\"answer\": \"if\", \"correct\": False},\n",
-    "            {\"answer\": \"for\", \"correct\": True, \"feedback\": \"Correct! 'for item in list:' iterates directly over items.\"},\n",
-    "            {\"answer\": \"loop\", \"correct\": False}\n",
-    "        ]\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What is printed by 'for i in range(3): print(i)'?\",\n",
-    "        \"type\": \"multiple_choice\",\n",
-    "        \"answers\": [\n",
-    "            {\"answer\": \"1 2 3\", \"correct\": False},\n",
-    "            {\"answer\": \"0 1 2\", \"correct\": True, \"feedback\": \"Correct! range(3) produces 0, 1, 2.\"},\n",
-    "            {\"answer\": \"0 1 2 3\", \"correct\": False},\n",
-    "            {\"answer\": \"1 2\", \"correct\": False}\n",
-    "        ]\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "display_quiz(quiz_data)"
-   ]
+   "source": "import random\nfrom jupyterquiz import display_quiz\n\nall_questions = [\n    {\n        \"question\": \"What is the correct way to create a variable in Python?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"int age = 10\", \"correct\": False},\n            {\"answer\": \"var age = 10\", \"correct\": False},\n            {\"answer\": \"age = 10\", \"correct\": True, \"feedback\": \"Correct! Python uses simple assignment without type declarations.\"},\n            {\"answer\": \"age := 10\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"Which data type is 'hello'?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"int\", \"correct\": False},\n            {\"answer\": \"str\", \"correct\": True, \"feedback\": \"Correct! Text in quotes is a string (str).\"},\n            {\"answer\": \"bool\", \"correct\": False},\n            {\"answer\": \"float\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"What is the output of print(3 + 2 * 2)?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"10\", \"correct\": False},\n            {\"answer\": \"7\", \"correct\": True, \"feedback\": \"Correct! Multiplication happens before addition (PEMDAS).\"},\n            {\"answer\": \"5\", \"correct\": False},\n            {\"answer\": \"8\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"Which collection type stores key-value pairs?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"list\", \"correct\": False},\n            {\"answer\": \"tuple\", \"correct\": False},\n            {\"answer\": \"dictionary\", \"correct\": True, \"feedback\": \"Correct! Dictionaries store key-value pairs like {'name': 'Jon'}.\"},\n            {\"answer\": \"set\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"What will print(len([1,2,3,4])) output?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"3\", \"correct\": False},\n            {\"answer\": \"4\", \"correct\": True, \"feedback\": \"Correct! len() returns the number of items in the list.\"},\n            {\"answer\": \"[1,2,3,4]\", \"correct\": False},\n            {\"answer\": \"Error\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"Which of the following is a Boolean value?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"\\\"True\\\"\", \"correct\": False, \"feedback\": \"This is a string, not a Boolean.\"},\n            {\"answer\": \"1\", \"correct\": False},\n            {\"answer\": \"True\", \"correct\": True, \"feedback\": \"Correct! True and False (capitalized) are Boolean values.\"},\n            {\"answer\": \"\\\"False\\\"\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"What symbol starts a comment in Python?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"//\", \"correct\": False},\n            {\"answer\": \"#\", \"correct\": True, \"feedback\": \"Correct! The hash symbol starts a single-line comment.\"},\n            {\"answer\": \"<!-- -->\", \"correct\": False},\n            {\"answer\": \"/* */\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"What does 'if x > 10:' represent?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"A loop\", \"correct\": False},\n            {\"answer\": \"A condition\", \"correct\": True, \"feedback\": \"Correct! This is a conditional statement.\"},\n            {\"answer\": \"A function\", \"correct\": False},\n            {\"answer\": \"A class\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"Which loop iterates over a list directly?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"while\", \"correct\": False},\n            {\"answer\": \"if\", \"correct\": False},\n            {\"answer\": \"for\", \"correct\": True, \"feedback\": \"Correct! 'for item in list:' iterates directly over items.\"},\n            {\"answer\": \"loop\", \"correct\": False}\n        ]\n    },\n    {\n        \"question\": \"What is printed by 'for i in range(3): print(i)'?\",\n        \"type\": \"multiple_choice\",\n        \"answers\": [\n            {\"answer\": \"1 2 3\", \"correct\": False},\n            {\"answer\": \"0 1 2\", \"correct\": True, \"feedback\": \"Correct! range(3) produces 0, 1, 2.\"},\n            {\"answer\": \"0 1 2 3\", \"correct\": False},\n            {\"answer\": \"1 2\", \"correct\": False}\n        ]\n    }\n]\n\n# Randomly select 5 questions\nquiz_data = random.sample(all_questions, 5)\n\ndisplay_quiz(quiz_data)"
   },
   {
    "cell_type": "markdown",
