Update Module 1 with 15 sections, add assessment, remove Live Code

--- a/01_syntax.ipynb
+++ b/01_syntax.ipynb
@@ -3,7 +3,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Module 1 — Python Foundations\n\nWelcome to Module 1 of CodeVision Academy.\n\nThis module brings everyone — regardless of background — to a **strong, practical baseline in Python**. Python is the foundation of the entire CodeVision stack, and by the end of this module you will be comfortable reading, writing, and running Python code that works with real data, files, and notebooks.\n\nWe focus on **doing**, not theory. Every concept is tied to examples you will reuse later for data wrangling, machine learning, vector search, and AI pipelines.\n\n---\n\n### What You'll Learn in This Module\n\n* Variables and basic data types (strings, integers, floats, booleans)\n* Operators and expressions\n* Lists, dictionaries, and other essential collections\n* Conditional statements (`if`, `elif`, `else`)\n* Loops for repeating actions (`for`, `while`)\n* Functions for reusable code\n* File handling and JSON processing\n* Working with Jupyter notebooks and Python scripts\n\n> **Note:** This is a hands-on introduction designed to give you early wins and the confidence to move deeper into Python and AI development."
+   "source": [
+    "# Module 1: Python Foundations\n",
+    "\n",
+    "**CodeVision Python Training**\n",
+    "\n",
+    "### Contents\n",
+    "\n",
+    "* **Part 1: Core Syntax & Types** (Sections 1–4)\n",
+    "* **Part 2: Data Structures** (Sections 5–8)\n",
+    "* **Part 3: Control Flow & Logic** (Sections 9–11)\n",
+    "* **Part 4: Data Handling & Environment** (Sections 12–15)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Welcome to Module 1\n",
+    "\n",
+    "This module brings everyone—regardless of background—to a strong, practical baseline in Python. Python is the foundation of the entire CodeVision stack. By the end of this module, you will be comfortable reading, writing, and running code that works with real data.\n",
+    "\n",
+    "We focus on **doing, not theory**. Every concept here is tied to examples you will reuse later for data wrangling, machine learning, and AI pipelines."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -11,9 +30,11 @@
    "source": [
     "---\n",
     "\n",
-    "## 1. Python Fundamentals: How Python Works\n",
+    "## Part 1: Core Syntax & Types\n",
     "\n",
-    "Python is designed to be readable and expressive. Code is structured using **indentation**, not brackets, which makes it easy to follow and reason about."
+    "### 1. Python Fundamentals\n",
+    "\n",
+    "Python is designed to be readable and expressive. Unlike many other languages, Python uses **indentation** (whitespace) to define code blocks rather than curly braces. This structure forces you to write clean, readable code."
    ]
   },
   {
@@ -22,18 +43,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello, CodeVision\")"
+    "# Standard print statement\n",
+    "print(\"Hello, CodeVision\")\n",
+    "\n",
+    "# Indentation defines the block\n",
+    "def start_engine():\n",
+    "    print(\"Engine started\")     # Indented line\n",
+    "    print(\"Ready to go\")        # Indented line\n",
+    "\n",
+    "start_engine()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "### 2. Variables and Core Data Types\n",
     "\n",
-    "## 2. Variables and Core Data Types\n",
-    "\n",
-    "Variables store values. Python automatically determines the type based on the value you assign."
+    "Variables store values. Python is **dynamically typed**, meaning it automatically determines the type based on the value you assign."
    ]
   },
   {
@@ -42,12 +69,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Jon\"\n",
-    "age = 45\n",
-    "active = True\n",
-    "balance = 1023.75\n",
+    "name = \"Jon\"          # String (str)\n",
+    "age = 45              # Integer (int)\n",
+    "active = True         # Boolean (bool)\n",
+    "balance = 1023.75     # Float (decimal number)\n",
     "\n",
-    "print(f\"Name: {name}, Age: {age}, Active: {active}, Balance: {balance}\")"
+    "# Checking a type\n",
+    "print(type(active))   # Output: <class 'bool'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Strings and Formatting\n",
+    "\n",
+    "Strings are text sequences. In modern Python, we use **f-strings** to inject variables directly into text. This is critical for generating dynamic messages or file paths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role = \"Engineer\"\n",
+    "level = 3\n",
+    "\n",
+    "# f-string formatting\n",
+    "print(f\"User: {role}, Level: {level}\")\n",
+    "# Output: User: Engineer, Level: 3\n",
+    "\n",
+    "# Common string methods\n",
+    "filename = \"  data.csv  \"\n",
+    "print(filename.strip().upper())\n",
+    "# Output: DATA.CSV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Type Conversion\n",
+    "\n",
+    "Sometimes data arrives in the wrong format (e.g., numbers stored as text in a CSV). You must cast them to the correct type to perform math."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_str = \"100\"\n",
+    "# total = value_str + 50  # This would cause an Error\n",
+    "\n",
+    "# Convert string to integer\n",
+    "total = int(value_str) + 50\n",
+    "print(total)\n",
+    "# Output: 150"
    ]
   },
   {
@@ -56,10 +136,11 @@
    "source": [
     "---\n",
     "\n",
-    "## 3. Data Structures\n",
+    "## Part 2: Data Structures\n",
     "\n",
-    "### Lists\n",
-    "Ordered, mutable collections."
+    "### 5. Lists\n",
+    "\n",
+    "Lists are **ordered, mutable** collections. They are the default tool for storing sequences of items."
    ]
   },
   {
@@ -69,7 +150,14 @@
    "outputs": [],
    "source": [
     "tools = [\"Python\", \"Pandas\", \"FAISS\"]\n",
+    "\n",
+    "# Adding an item\n",
     "tools.append(\"Ollama\")\n",
+    "\n",
+    "# Accessing by index (0-based)\n",
+    "print(tools[0])\n",
+    "# Output: Python\n",
+    "\n",
     "print(tools)"
    ]
   },
@@ -77,8 +165,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dictionaries\n",
-    "Key-value pairs for structured data."
+    "### 6. Tuples\n",
+    "\n",
+    "Tuples are **immutable** sequences. Once created, they cannot be changed. They are faster than lists and used to protect data integrity (e.g., coordinates, configuration constants)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defined with parentheses\n",
+    "dimensions = (1920, 1080)\n",
+    "\n",
+    "print(f\"Width: {dimensions[0]}, Height: {dimensions[1]}\")\n",
+    "\n",
+    "# dimensions[0] = 1280  # This would cause a TypeError!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Sets\n",
+    "\n",
+    "Sets are unordered collections of **unique** elements. They are incredibly useful for deduplication (removing duplicates) and membership testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defined with curly braces but no keys\n",
+    "tags = {\"python\", \"ai\", \"python\", \"data\"}\n",
+    "\n",
+    "print(tags)\n",
+    "# Output: {'python', 'ai', 'data'} (Duplicate 'python' removed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Dictionaries\n",
+    "\n",
+    "Dictionaries store **Key-Value** pairs. They are the standard way to represent structured records (similar to JSON objects)."
    ]
   },
   {
@@ -92,7 +226,10 @@
     "    \"role\": \"Engineer\",\n",
     "    \"active\": True\n",
     "}\n",
-    "print(user[\"name\"])"
+    "\n",
+    "# Access value by key\n",
+    "print(user[\"name\"])\n",
+    "# Output: Jon"
    ]
   },
   {
@@ -101,9 +238,11 @@
    "source": [
     "---\n",
     "\n",
-    "## 4. Control Flow\n",
+    "## Part 3: Control Flow & Logic\n",
     "\n",
-    "### Conditionals"
+    "### 9. Conditionals\n",
+    "\n",
+    "Logic flow is controlled using `if`, `elif`, and `else` statements."
    ]
   },
   {
@@ -113,17 +252,24 @@
    "outputs": [],
    "source": [
     "score = 85\n",
-    "if score >= 80:\n",
+    "\n",
+    "if score >= 90:\n",
+    "    print(\"Distinction\")\n",
+    "elif score >= 80:\n",
     "    print(\"Pass\")\n",
     "else:\n",
-    "    print(\"Fail\")"
+    "    print(\"Fail\")\n",
+    "# Output: Pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loops"
+    "### 10. Loops\n",
+    "\n",
+    "* **For Loops:** Used when you know how many times to iterate (e.g., through a list).\n",
+    "* **While Loops:** Used when you need to loop *until* a condition changes."
    ]
   },
   {
@@ -132,20 +278,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tools = [\"Python\", \"Pandas\", \"FAISS\", \"Ollama\"]\n",
+    "# For loop\n",
+    "tools = [\"Python\", \"Pandas\"]\n",
     "for tool in tools:\n",
-    "    print(tool)"
+    "    print(tool)\n",
+    "\n",
+    "print(\"---\")\n",
+    "\n",
+    "# Range loop (prints 1, 2, 3)\n",
+    "for i in range(1, 4):\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "### 11. Functions\n",
     "\n",
-    "## 5. Functions\n",
-    "\n",
-    "Functions group reusable logic."
+    "Functions group reusable logic. A function accepts input (arguments) and usually returns a result using the `return` keyword."
    ]
   },
   {
@@ -154,10 +305,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def greet(name):\n",
-    "    return f\"Hello, {name}\"\n",
+    "def double_value(x):\n",
+    "    return x * 2\n",
     "\n",
-    "print(greet(\"CodeVision\"))"
+    "result = double_value(10)\n",
+    "print(result)\n",
+    "# Output: 20"
    ]
   },
   {
@@ -166,9 +319,11 @@
    "source": [
     "---\n",
     "\n",
-    "## 6. File Handling\n",
+    "## Part 4: Data Handling & Environment\n",
     "\n",
-    "Use `with open()` to safely read and write files."
+    "### 12. Modules and Libraries\n",
+    "\n",
+    "Python's power comes from its ecosystem. You use `import` to load external code (modules)."
    ]
   },
   {
@@ -177,24 +332,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: Reading a file\n",
-    "# with open(\"data.txt\", \"r\") as file:\n",
-    "#     for line in file:\n",
-    "#         print(line.strip())\n",
+    "import math\n",
+    "import random\n",
     "\n",
-    "# This is commented out since the file doesn't exist\n",
-    "print(\"File handling uses 'with open()' for safe access\")"
+    "print(math.sqrt(16))      # Output: 4.0\n",
+    "print(random.random())    # Output: 0.854... (random)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "### 13. File Handling\n",
     "\n",
-    "## 7. JSON Processing\n",
+    "Always use the `with open(...)` statement to handle files. It ensures the file is **automatically closed** even if errors occur, preventing data corruption."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing to a file\n",
+    "with open(\"log.txt\", \"w\") as f:\n",
+    "    f.write(\"System Start\")\n",
     "\n",
-    "JSON is the standard format for data exchange in AI systems."
+    "# Reading from a file\n",
+    "with open(\"log.txt\", \"r\") as f:\n",
+    "    content = f.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 14. JSON Processing\n",
+    "\n",
+    "JSON is the standard format for data exchange in AI and APIs. Python's `json` module translates between JSON text strings and Python dictionaries."
    ]
   },
   {
@@ -206,28 +382,54 @@
     "import json\n",
     "\n",
     "data = {\"status\": \"ok\", \"count\": 42}\n",
+    "\n",
+    "# Convert Dict -> JSON String\n",
     "json_string = json.dumps(data, indent=2)\n",
-    "print(json_string)"
+    "print(json_string)\n",
+    "\n",
+    "# Convert JSON String -> Dict\n",
+    "parsed_data = json.loads(json_string)\n",
+    "print(parsed_data[\"status\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "### 15. Jupyter vs. Scripts & Virtual Environments\n",
     "\n",
-    "## 8. Jupyter and Scripts\n",
+    "**Jupyter Notebooks (`.ipynb`)**\n",
     "\n",
-    "- **Jupyter Notebooks**: Interactive development and experimentation\n",
-    "- **Python Scripts**: Automation and production\n",
+    "* **Purpose:** Interactive experimentation, data visualization, and learning.\n",
+    "* **Launch Online:** Click the **Rocketship Icon** at the top of this page to launch this content in **Binder** or **Google Colab**. This allows you to complete the exercises directly in your browser without installing anything locally.\n",
+    "* **Kernel:** The \"brain\" running the code. If variables act strangely, use **Restart Kernel** to clear memory and start fresh.\n",
     "\n",
-    "To run a script from the command line:\n",
+    "**Python Scripts (`.py`)**\n",
     "\n",
-    "```bash\n",
-    "python my_script.py\n",
-    "```\n",
+    "* **Purpose:** Automation, production pipelines, and scheduled tasks.\n",
+    "* **Execution:** Run from the terminal using `python my_script.py`.\n",
     "\n",
-    "Both are essential — notebooks for exploration, scripts for automation."
+    "**Virtual Environments**\n",
+    "\n",
+    "A virtual environment is an isolated folder for a project's dependencies. It prevents library conflicts between projects (e.g., Project A needs Pandas 1.0, Project B needs Pandas 2.0).\n",
+    "\n",
+    "* **Creation:** `python -m venv venv`\n",
+    "* **Activation:**\n",
+    "    * Mac/Linux: `source venv/bin/activate`\n",
+    "    * Windows: `venv\\Scripts\\activate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Running a script from command line\n",
+    "# python my_script.py\n",
+    "\n",
+    "print(\"Both notebooks and scripts are essential tools!\")\n",
+    "print(\"Notebooks for exploration, scripts for automation.\")"
    ]
   }
  ],
@@ -239,7 +441,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.0"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
