Fix assessment: add Python kernel and hide test cells

--- a/Module1_Python_Foundations_Assessment.ipynb
+++ b/Module1_Python_Foundations_Assessment.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "15c80aa6",
    "metadata": {},
    "source": [
-    "# Module 1 – Python Foundations Assessment\n",
+    "# Module 1 â€” Python Foundations Assessment\n",
     "\n",
-    "## Assessment Instructions – Read Carefully\n",
+    "## Assessment Instructions â€” Read Carefully\n",
     "\n",
-    "This assessment is partly auto-marked using hidden test cells.\n",
+    "This assessment tests your understanding of Python fundamentals from Module 1.\n",
     "\n",
     "**General rules**:\n",
     "- Do not rename required functions\n",
@@ -17,14 +16,17 @@
     "- Do not delete or modify any cell unless clearly marked\n",
     "- Your notebook must run top-to-bottom using **Run all**\n",
     "\n",
-    "Some exercises require you to define functions with **exact names**. Hidden test cells will call these functions directly.\n"
+    "Some exercises require you to define functions with **exact names**."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd7eb89",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# === HIDDEN SCORING UTILITY ===\n",
@@ -40,21 +42,22 @@
     "    for ex, (p, m) in __assessment_scores.items():\n",
     "        print(f'{ex}: {p}/{m}')\n",
     "    print('--------------------------')\n",
-    "    print(f'TOTAL: {total}/{max_total}')\n"
+    "    print(f'TOTAL: {total}/{max_total}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4f9ed064",
    "metadata": {},
    "source": [
-    "## Exercise 1 – Variables and Output\n",
+    "---\n",
+    "\n",
+    "## Exercise 1 â€” Variables and Output\n",
     "\n",
     "**Task**:\n",
     "1. Define the following variables:\n",
-    "- `name` (string)\n",
-    "- `age` (integer)\n",
-    "- `learning_python` (boolean)\n",
+    "   - `name` (string)\n",
+    "   - `age` (integer)\n",
+    "   - `learning_python` (boolean)\n",
     "\n",
     "2. Print a single formatted sentence that includes all three values."
    ]
@@ -62,21 +65,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494eb0b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9832a1d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# === HIDDEN TEST CELL – Exercise 1 ===\n",
+    "# === HIDDEN TEST CELL â€” Exercise 1 ===\n",
     "points = 0\n",
     "try:\n",
     "    assert isinstance(name, str)\n",
@@ -90,10 +95,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5135ce",
    "metadata": {},
    "source": [
-    "## Exercise 2 – Lists, Loops, and Conditionals\n",
+    "---\n",
+    "\n",
+    "## Exercise 2 â€” Lists, Loops, and Conditionals\n",
     "\n",
     "**Task**:\n",
     "Given a list called `numbers`, write code that:\n",
@@ -107,21 +113,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a2e7da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a02462",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# === HIDDEN TEST CELL – Exercise 2 ===\n",
+    "# === HIDDEN TEST CELL â€” Exercise 2 ===\n",
     "points = 0\n",
     "try:\n",
     "    assert isinstance(numbers, list)\n",
@@ -135,10 +143,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a565be64",
    "metadata": {},
    "source": [
-    "## Exercise 3 – Functions\n",
+    "---\n",
+    "\n",
+    "## Exercise 3 â€” Functions\n",
     "\n",
     "**Task**:\n",
     "Write a function with the **exact signature** below:\n",
@@ -155,7 +164,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e4b516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,11 +175,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf27238",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# === HIDDEN TEST CELL – Exercise 3 ===\n",
+    "# === HIDDEN TEST CELL â€” Exercise 3 ===\n",
     "points = 0\n",
     "try:\n",
     "    assert calculate_average([10,20,30]) == 20\n",
@@ -193,10 +204,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b33146",
    "metadata": {},
    "source": [
-    "## Exercise 4 – Dictionaries\n",
+    "---\n",
+    "\n",
+    "## Exercise 4 â€” Dictionaries\n",
     "\n",
     "**Task**:\n",
     "Create a dictionary called `student_scores` where:\n",
@@ -211,21 +223,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d125b51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2946ea95",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# === HIDDEN TEST CELL – Exercise 4 ===\n",
+    "# === HIDDEN TEST CELL â€” Exercise 4 ===\n",
     "points = 0\n",
     "try:\n",
     "    assert isinstance(student_scores, dict)\n",
@@ -240,10 +254,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e74a6c5",
    "metadata": {},
    "source": [
-    "## Exercise 5 – File Processing\n",
+    "---\n",
+    "\n",
+    "## Exercise 5 â€” File Processing\n",
     "\n",
     "**Task**:\n",
     "Write a function with the **exact signature** below:\n",
@@ -262,7 +277,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4eb6df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,11 +288,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7114ec",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# === HIDDEN TEST CELL – Exercise 5 ===\n",
+    "# === HIDDEN TEST CELL â€” Exercise 5 ===\n",
     "points = 0\n",
     "test_file = 'test_words.txt'\n",
     "with open(test_file, 'w') as f:\n",
@@ -295,15 +312,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b94ac1e",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "summary()"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
