Fix assessment: clean exercises with Colab submission

--- a/Module1_Assessment.ipynb
+++ b/Module1_Assessment.ipynb
@@ -159,33 +159,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import auth, _message\n",
-    "from googleapiclient.discovery import build\n",
-    "from googleapiclient.http import MediaFileUpload\n",
-    "import ipywidgets as widgets\n",
-    "import os\n",
+    "# Detect environment and submit\n",
+    "try:\n",
+    "    from google.colab import auth, _message\n",
+    "    from googleapiclient.discovery import build\n",
+    "    from googleapiclient.http import MediaFileUpload\n",
+    "    import ipywidgets as widgets\n",
+    "    import os\n",
     "\n",
-    "auth.authenticate_user()\n",
-    "drive_service = build('drive', 'v3')\n",
+    "    auth.authenticate_user()\n",
+    "    drive_service = build('drive', 'v3')\n",
     "\n",
-    "SUBMISSION_FOLDER_ID = '14F8N8KFYMbtTbHWDWFHshaVdmNyPxKHs'\n",
+    "    SUBMISSION_FOLDER_ID = '14F8N8KFYMbtTbHWDWFHshaVdmNyPxKHs'\n",
     "\n",
-    "def submit_notebook(button):\n",
-    "    _message.blocking_request('save')\n",
-    "    name = os.environ.get('COLAB_NOTEBOOK_NAME')\n",
-    "    if not name:\n",
-    "        print('Rename notebook to <firstname>_<lastname>_Module1.ipynb')\n",
-    "        return\n",
-    "    media = MediaFileUpload(name, mimetype='application/vnd.google.colaboratory')\n",
-    "    drive_service.files().create(\n",
-    "        body={'name': name, 'parents': [SUBMISSION_FOLDER_ID]},\n",
-    "        media_body=media\n",
-    "    ).execute()\n",
-    "    print('Submission successful:', name)\n",
+    "    def submit_notebook(button):\n",
+    "        _message.blocking_request('save')\n",
+    "        name = os.environ.get('COLAB_NOTEBOOK_NAME')\n",
+    "        if not name:\n",
+    "            print('Please rename this notebook to: <firstname>_<lastname>_Module1.ipynb')\n",
+    "            print('Then run this cell again.')\n",
+    "            return\n",
+    "        media = MediaFileUpload(name, mimetype='application/vnd.google.colaboratory')\n",
+    "        drive_service.files().create(\n",
+    "            body={'name': name, 'parents': [SUBMISSION_FOLDER_ID]},\n",
+    "            media_body=media\n",
+    "        ).execute()\n",
+    "        print('Submission successful:', name)\n",
     "\n",
-    "btn = widgets.Button(description='Submit Assignment', button_style='success')\n",
-    "btn.on_click(submit_notebook)\n",
-    "display(btn)"
+    "    btn = widgets.Button(description='Submit Assignment', button_style='success')\n",
+    "    btn.on_click(submit_notebook)\n",
+    "    display(btn)\n",
+    "\n",
+    "except ImportError:\n",
+    "    print('='*50)\n",
+    "    print('SUBMISSION INSTRUCTIONS')\n",
+    "    print('='*50)\n",
+    "    print()\n",
+    "    print('This submission feature requires Google Colab.')\n",
+    "    print()\n",
+    "    print('To submit your assessment:')\n",
+    "    print('1. Download this notebook (File > Download > Download .ipynb)')\n",
+    "    print('2. Rename it to: <firstname>_<lastname>_Module1.ipynb')\n",
+    "    print('3. Open Google Colab: https://colab.research.google.com')\n",
+    "    print('4. Upload your notebook (File > Upload notebook)')\n",
+    "    print('5. Run this cell again to submit')\n",
+    "    print()"
    ]
   }
  ],
